--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-12  Alexandre Oliva  <aoliva@redhat.com>
+
+	* configure: Rebuilt with new ../libtool.m4.
+
 2000-09-11  Tom Tromey  <tromey@cygnus.com>
 
 	* java/lang/reflect/Field.java (toString): Don't rely on
