2000-09-12  Philipp Thomas  <pthomas@suse.de>
	* POTFILES.in: Remove yet more files caught by the new
	checking target.
	* gcc.pot: Regenerated.
	* cat-id-tbl.c: Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36352 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,5 +1,12 @@
 2000-09-12  Philipp Thomas  <pthomas@suse.de>
 
+	* POTFILES.in: Remove yet more files caught by the new
+	checking target.
+	* gcc.pot: Regenerated.
+	* cat-id-tbl.c: Likewise.
+
+2000-09-12  Philipp Thomas  <pthomas@suse.de>
+
 	* Makefile.in.in (stamp-check-pot): Don't use $@ in rule.
 
 2000-09-12  Philipp Thomas  <pthomas@suse.de>
