* c-typeck.c (process_init_element): Avoid union init warnings on 	floating point zero.  Don't crash on unions containing structs.
testsuite:
	* gcc.dg/wtr-union-init-2.c, gcc.dg/wtr-union-init-3.c: New tests.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36358 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* c-typeck.c (process_init_element): Avoid union init warnings on
+	floating point zero.  Don't crash on unions containing structs.
+
 2000-09-12  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/sh/sh.h (PREDICATE_CODES): Add CONST_DOUBLE to
