* convex.md: Use "+" instead of "=" for outputs wrapped in a         STRICT_LOW_PART.         * i370.md, i386.md, ns32k.md, sh.md, vax.md: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36362 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -1717,7 +1717,7 @@
    (set_attr "mode" "HI")])
 
 (define_insn "*movstricthi_xor"
-  [(set (strict_low_part (match_operand:HI 0 "register_operand" "=r"))
+  [(set (strict_low_part (match_operand:HI 0 "register_operand" "+r"))
 	(match_operand:HI 1 "const0_operand" "i"))
    (clobber (reg:CC 17))]
   "reload_completed && (!TARGET_USE_MOV0 || optimize_size)"
