--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2000-09-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* builtins.c (built_in_decls): New array.
+	(expand_builtin_fputs): New function.
+	(expand_builtin): Handle BUILT_IN_FPUTC and BUILT_IN_FPUTS.
+
+	* builtins.def (BUILT_IN_FPUTC, BUILT_IN_FPUTS): New members.
+
+	* c-common.c (c_common_nodes_and_builtins): Handle fputc/fputs.
+
+	* tree.h (built_in_decls): New array.
+
 Tue Sep 12 08:53:57 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* convex.md: Use "+" instead of "=" for outputs wrapped in a
