* decl.c (finish_case_label): Given the LABEL_DECL a 	DECL_CONTEXT.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36365 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-12  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (finish_case_label): Given the LABEL_DECL a
+	DECL_CONTEXT.
+
 2000-09-12  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* error.c (TFF_PLAIN_IDENTIFIER, TFF_NAMESPACE_SCOPE,
