--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-12  Bernd Schmidt  <bernds@redhat.co.uk>
+
+	* flow.c (try_pre_increment_1): Don't do anything to sets of the stack
+	pointer.
+
 2000-09-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* builtins.c (built_in_decls): New array.
