Fix ia64-linux glibc intl/loadmsgcat.c miscompilation. 	* ifcvt.c (noce_process_if_block): If A and B are the same, and no 	else block, and X has side-effects, then fail.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36373 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-12  Jim Wilson  <wilson@cygnus.com>
+
+	* ifcvt.c (noce_process_if_block): If A and B are the same, and no
+	else block, and X has side-effects, then fail.
+
 2000-09-12  Greg McGary  <greg@mcgary.org>
 
 	* config/mips/mips-protos.h
