* loop.c (note_set_pseudo_multiple_uses): Correct.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36375 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-13  Michael Hayes  <mhayes@cygnus.com>
+
+
+
 2000-09-12  Jim Wilson  <wilson@cygnus.com>
 
 	* ifcvt.c (noce_process_if_block): If A and B are the same, and no
