* expr.c (pop_type_0): Return `Object' if trying to merge two 	interface types. 	* verify.c (merge_types): Don't return `TYPE_UNKNOWN' for 	interface types; `Object' is always a valid supertype.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36378 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,5 +1,12 @@
 2000-09-12  Tom Tromey  <tromey@cygnus.com>
 
+	* expr.c (pop_type_0): Return `Object' if trying to merge two
+	interface types.
+	* verify.c (merge_types): Don't return `TYPE_UNKNOWN' for
+	interface types; `Object' is always a valid supertype.
+
+2000-09-12  Tom Tromey  <tromey@cygnus.com>
+
 	Fix for PR gcj/33:
 	* jv-scan.c (help): Document --encoding.
 	(options): Added `encoding' entry.
