Correct last entry.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36379 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,6 +1,6 @@
 2000-09-13  Michael Hayes  <mhayes@cygnus.com>
 
-
+        * loop.c (note_set_pseudo_multiple_uses): Correct.
 
 2000-09-12  Jim Wilson  <wilson@cygnus.com>
 
