--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-12  Tom Tromey  <tromey@cygnus.com>
+
+	* configure, config.in: Rebuilt.
+	* configure.in: Check for iconv, nl_langinfo, langinfo.h.
+
 2000-09-12  Jakub Jelinek  <jakub@redhat.com>
 
 	* c-lex.c (lex_string): Use charwidth to compute bytemask.
