* jcf-parse.c: Include <locale.h>. 	* jv-scan.c: Include <locale.h>.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36388 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-13  Tom Tromey  <tromey@cygnus.com>
+
+	* jcf-parse.c: Include <locale.h>.
+	* jv-scan.c: Include <locale.h>.
+
 2000-09-12  Tom Tromey  <tromey@cygnus.com>
 
 	* expr.c (pop_type_0): Return `Object' if trying to merge two
