* java/lang/reflect/natArray.cc (BooleanClass): New define. 	(get): Ensure Boolean class is initialized. 	* java/lang/reflect/natField.cc (BooleanClass): New define. 	(get): Ensure Boolean class is initialized.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36391 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2000-09-13  Tom Tromey  <tromey@cygnus.com>
+
+	* java/lang/reflect/natArray.cc (BooleanClass): New define.
+	(get): Ensure Boolean class is initialized.
+	* java/lang/reflect/natField.cc (BooleanClass): New define.
+	(get): Ensure Boolean class is initialized.
+
 2000-09-13  Bryce McKinlay  <bryce@albatross.co.nz>
 
 	* java/lang/String.java (CASE_INSENSITIVE_ORDER): New static field.
