--- a/gcc/gcc.1
+++ b/gcc/gcc.1
@@ -20,7 +20,7 @@
 .if n .sp
 .if t .sp 0.4
 ..
-.Id $Id: gcc.1,v 1.15 2000/05/17 08:15:25 cagney Exp $
+.Id $Id: gcc.1,v 1.16 2000/09/11 06:10:30 ciceron Exp $
 .TH GCC 1 "\*(Dt" "GNU Tools" "GNU Tools"
 .SH NAME
 gcc, g++ \- GNU project C and C++ Compiler (gcc-2.96)
@@ -2310,6 +2310,12 @@ standard error.
 .B \-dp
 Annotate the assembler output with a comment indicating which
 pattern and alternative was used.
+.TP
+.B \-dP
+Dump the RTL in the assembler output as a comment before each instruction.
+Also turns on
+.B \-dp
+annotation.
 .TP
 .B \-fpretend\-float
 When running a cross-compiler, pretend that the target machine uses the
