--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-25  Geert Bosch <bosch@gnat.com>
+
+	* 4gintnam.ads: fix header format.
+
 2001-10-25  Ed Schonberg <schonber@gnat.com>
 
 	* sem_res.adb (Resolve_Call): if the call is actually an indexing 
