--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-25  Ed Schonberg <schonber@gnat.com>
+
+	* sem_util.adb (Defining_Entity): in case of error, attach created 
+        entity to specification, so that semantic analysis can proceed.
+
 2001-10-25  Robert Dewar <dewar@gnat.com>
 
 	* sem_util.adb 
