* par-ch3.adb (P_Subtype_Mark_Resync): for an anonymous array         return Error rather than Empty so that analysis can proceed.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46517 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,10 @@
 2001-10-25  Ed Schonberg <schonber@gnat.com>
 
+	* par-ch3.adb (P_Subtype_Mark_Resync): for an anonymous array 
+        return Error rather than Empty so that analysis can proceed.
+
+2001-10-25  Ed Schonberg <schonber@gnat.com>
+
 	* sem_util.adb (Enter_Name): better handling of cascaded error 
         messages when a unit appears in its own context.
 
